Envirnment setup from local
Environment setup from local

--- a/hol/0_setup_environment.ipynb
+++ b/hol/0_setup_environment.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f01b6c12",
    "metadata": {},
    "outputs": [],
@@ -43,37 +43,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9abd243f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "accountname = getpass.getpass() # ORGNAME-ACCOUNTNAME (separated by minus sign)"
+    "accountname = getpass.getpass() # ORGNAME-ACCOUNTNAME (separated by minus sign)\n",
+    "#LZAKUDJ-LX98642"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8bfe26ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "username = getpass.getpass()    # SNOWFLAKE-USERNAME"
+    "username = getpass.getpass()    # SNOWFLAKE-USERNAME\n",
+    "#asifraza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "53cd8c1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "password = getpass.getpass()    # SNOWFLAKE-PASSWORD"
+    "password = getpass.getpass()    # SNOWFLAKE-PASSWORD\n",
+    "#...."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8568f0ef",
    "metadata": {},
    "outputs": [],
@@ -89,6 +92,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "67d38298",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(ID='id', FIRST_NAME='first_name', LAST_NAME='last_name', EMAIL='email', GENDER='gender', IP_ADDRESS='ip_address'),\n",
+       " Row(ID='1', FIRST_NAME='Guthry', LAST_NAME='Stelfox', EMAIL='gstelfox0@wikimedia.org', GENDER='Male', IP_ADDRESS='207.213.142.210'),\n",
+       " Row(ID='2', FIRST_NAME='Carlye', LAST_NAME='Handman', EMAIL='chandman1@friendfeed.com', GENDER='Female', IP_ADDRESS='11.152.213.7'),\n",
+       " Row(ID='3', FIRST_NAME='Barbee', LAST_NAME='Shuker', EMAIL='bshuker2@cargocollective.com', GENDER='Female', IP_ADDRESS='100.253.135.185'),\n",
+       " Row(ID='4', FIRST_NAME='Meggy', LAST_NAME='Arrandale', EMAIL='marrandale3@sohu.com', GENDER='Female', IP_ADDRESS='111.128.235.100'),\n",
+       " Row(ID='5', FIRST_NAME='Charlot', LAST_NAME='Flello', EMAIL='cflello4@live.com', GENDER='Female', IP_ADDRESS='41.170.142.96'),\n",
+       " Row(ID='6', FIRST_NAME='Tremayne', LAST_NAME='Yalden', EMAIL='tyalden5@mozilla.com', GENDER='Male', IP_ADDRESS='79.74.205.148'),\n",
+       " Row(ID='7', FIRST_NAME='Donal', LAST_NAME='Downe', EMAIL='ddowne6@tripod.com', GENDER='Male', IP_ADDRESS='11.8.15.169'),\n",
+       " Row(ID='8', FIRST_NAME='Maison', LAST_NAME='Swatheridge', EMAIL='mswatheridge7@weibo.com', GENDER='Male', IP_ADDRESS='219.97.160.110'),\n",
+       " Row(ID='9', FIRST_NAME='Ophelie', LAST_NAME='Bris', EMAIL='obris8@mlb.com', GENDER='Female', IP_ADDRESS='54.43.245.34')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read from table\n",
+    "\n",
+    "session.sql(\"SELECT * FROM TESTDB.TESTTABLE.MOCKDATA LIMIT 10\").collect()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "65d6ed51",
@@ -99,14 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "496c37d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(status='Warehouse TEMP_WH successfully created.')]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create two Virtual Warehouses\n",
-    "session.sql(\"CREATE OR REPLACE WAREHOUSE HOL_WH_HIGH_MEM WITH WAREHOUSE_SIZE='MEDIUM' WAREHOUSE_TYPE='SNOWPARK-OPTIMIZED'\").collect()\n",
-    "session.sql(\"CREATE OR REPLACE WAREHOUSE HOL_WH WITH WAREHOUSE_SIZE='X-SMALL'\").collect()"
+    "session.sql(\"CREATE OR REPLACE WAREHOUSE TEMP_WH WITH WAREHOUSE_SIZE='X-SMALL'\").collect()"
    ]
   },
   {
@@ -115,18 +160,29 @@
    "id": "dfa9eced",
    "metadata": {},
    "source": [
-    "## Create Database for HOL"
+    "## Create Database for MOCK_DATA_TEMP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "e8fe80b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Row(status='Database MOCK_DATA_TEMP successfully created.')]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create Databse\n",
-    "session.sql(\"CREATE OR REPLACE DATABASE HOL_DB\").collect()"
+    "session.sql(\"CREATE OR REPLACE DATABASE MOCK_DATA_TEMP\").collect()"
    ]
   },
   {
@@ -135,31 +191,40 @@
    "id": "33dc96fd",
    "metadata": {},
    "source": [
-    "## Load HOL data into Snowflake"
+    "## Load MOCK_DATA_TEMP data into Snowflake"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "dca48415",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Loading from local CSV-files\n",
-    "application_record_df = pd.read_csv('data/application_record.csv.zip')\n",
-    "credit_record_df = pd.read_csv('data/credit_record.csv.zip')"
+    "mock_data_df = pd.read_csv('MOCK_DATA.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7d0c4924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<snowflake.snowpark.table.Table at 0x282ddfee080>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Upload to Snowflake\n",
-    "session.write_pandas(application_record_df, table_name='APPLICATION_RECORD', auto_create_table=True, overwrite=True)\n",
-    "session.write_pandas(credit_record_df, table_name='CREDIT_RECORD', auto_create_table=True, overwrite=True)"
+    "\n",
+    "session.write_pandas(mock_data_df, table_name='MOCK_DATA_TEMP', auto_create_table=True, overwrite=True)"
    ]
   },
   {
@@ -175,21 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3219b4c7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "connection_parameters[\"database\"] = 'HOL_DB'\n",
+    "connection_parameters[\"database\"] = 'MOCK_DATA_TEMP'\n",
     "connection_parameters[\"schema\"] = 'PUBLIC'\n",
-    "connection_parameters[\"warehouse\"] = 'HOL_WH'\n",
+    "connection_parameters[\"warehouse\"] = 'TEMP_WH'\n",
     "with open('creds.json', 'w') as outfile:\n",
     "        outfile.write(json.dumps(connection_parameters))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "a4bfbf3c",
    "metadata": {},
    "outputs": [],
@@ -233,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
